--- a/src/stylesSass/5-templates/_media-screen.sass
+++ b/src/stylesSass/5-templates/_media-screen.sass
@@ -1,6 +1,38 @@
+@media screen and (min-height: 450px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        min-height: 18rem
+        height: 18rem
+
 @media screen and (min-height: 500px) and (max-width: 700px)
     .menu-content
         top: 20%
+
+    .hero-image,
+    .showcase-image
+        min-height: 20rem
+        height: 20rem
+
+@media screen and (min-height: 550px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        min-height: 22rem
+        height: 22rem
+@media screen and (min-height: 600px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        min-height: 24rem
+        height: 24rem
+@media screen and (min-height: 650px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        min-height: 26rem
+        height: 26rem
+@media screen and (min-height: 700px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        min-height: 28rem
+        height: 28rem
 
 @media screen and (min-width: 700px)
     .grid
