add only 600 and 700 media screens for heroimage

--- a/src/stylesSass/5-templates/_media-screen.sass
+++ b/src/stylesSass/5-templates/_media-screen.sass
@@ -2,6 +2,18 @@
     .menu-content
         top: 20%
 
+@media screen and (min-height: 600px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        min-height: 26rem
+        height: 26rem
+
+@media screen and (min-height: 700px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        min-height: 28rem
+        height: 28rem
+
 @media screen and (min-width: 700px)
     .grid
         display: grid
