--- a/styles/main.css
+++ b/styles/main.css
@@ -191,7 +191,7 @@ button {
   width: 100%;
   height: 70px;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
 #navigation-bar.clear-bar {
@@ -408,7 +408,7 @@ a.toggle:hover {
 
 .hero-image {
   position: relative;
-  height: 18rem;
+  height: 20rem;
 }
 
 .hero-image img {
@@ -420,7 +420,7 @@ a.toggle:hover {
 
 .showcase-image {
   position: relative;
-  height: 16rem;
+  height: 20rem;
 }
 
 .showcase-image img {
@@ -541,6 +541,20 @@ img.image-top {
 @media screen and (min-height: 500px) and (max-width: 700px) {
   .menu-content {
     top: 20%;
+  }
+}
+@media screen and (min-height: 600px) and (max-width: 700px) {
+  .hero-image,
+.showcase-image {
+    min-height: 26rem;
+    height: 26rem;
+  }
+}
+@media screen and (min-height: 700px) and (max-width: 700px) {
+  .hero-image,
+.showcase-image {
+    min-height: 28rem;
+    height: 28rem;
   }
 }
 @media screen and (min-width: 700px) {
