--- a/src/stylesSass/3-layout/_main-layout.sass
+++ b/src/stylesSass/3-layout/_main-layout.sass
@@ -144,7 +144,7 @@ a.toggle
     transition: background 0.3s ease
     line-height: 1.9rem
     font-size: 1.3rem
-    font-weight: lighter
+    font-weight: normal
 
     &:hover
         color: $green
