--- a/styles/main.css
+++ b/styles/main.css
@@ -350,7 +350,7 @@ a.toggle {
   transition: background 0.3s ease;
   line-height: 1.9rem;
   font-size: 1.3rem;
-  font-weight: lighter;
+  font-weight: normal;
 }
 a.toggle:hover {
   color: #87c5be;
