sync font weights

--- a/src/stylesSass/2-base/_core.sass
+++ b/src/stylesSass/2-base/_core.sass
@@ -3,10 +3,12 @@ html
     font-size: 1em
     
 body
-    font-family: $main-font
     background: white
     color: #333
-    line-height: 1.4em
+    font-family: $main-font
+    font-weight: 300
+    line-height: 1.4rem
+
     margin: 0
 
 img
