change hero image and menu colour

--- a/src/stylesSass/1-helpers/_variables.sass
+++ b/src/stylesSass/1-helpers/_variables.sass
@@ -14,8 +14,7 @@
     transform: translate(-10px, -10px)
 
 $yellow-button: #FFBB94
-$green: rgb(135, 197, 190)
-$green-title: #61b6ac
+$green: #72d3ab
 $green-transparent: #87c5be40
 $main-font: 'Open Sans', sans-serif
 $button-font: 'Roboto', sans-serif
