--- a/src/stylesSass/5-templates/_media-screen.sass
+++ b/src/stylesSass/5-templates/_media-screen.sass
@@ -37,11 +37,9 @@
     .showcase-title
         font-size: 3.7rem
 
+    .showcase-image,
     .hero-image
         height: 70vh
-
-    .showcase-image
-        height: 60vh
 
     .section-a
         padding: 1em
