--- a/src/stylesSass/1-helpers/_variables.sass
+++ b/src/stylesSass/1-helpers/_variables.sass
@@ -14,7 +14,7 @@
     transform: translate(-10px, -10px)
 
 $yellow-button: #FFBB94
-$green: #4acaaf
+$green: #4eceb2
 $green-transparent: #87c5be40
 $main-font: 'Open Sans', sans-serif
 $button-font: 'Roboto', sans-serif
