--- a/src/stylesSass/4-modules/_image-containers.sass
+++ b/src/stylesSass/4-modules/_image-containers.sass
@@ -1,111 +1,109 @@
-// showcase
+// Showcase
 #showcase
-    position: relative
+	position: relative
 
 .hero-image
-    position: relative
-    height: 20rem
+	position: relative
+	height: 20rem
 .hero-image img
-    width: 100%
-    height: 100%
-    object-fit: cover
-    object-position: center
+	width: 100%
+	height: 100%
+	object-fit: cover
+	object-position: center
 
 .showcase-image
-    position: relative
-    height: 20rem
+	position: relative
+	height: 20rem
 
 .showcase-image img
-    width: 100%
-    height: 100%
-    object-fit: cover
-    object-position: bottom
+	width: 100%
+	height: 100%
+	object-fit: cover
+	object-position: bottom
 
 .showcase-title
-    position: absolute
-    text-align: left
-    bottom: 1rem
-    color: white
-    font-family: $logo-font
-    font-size: 3rem
-    line-height: 1.1em
+	position: absolute
+	text-align: left
+	bottom: 1rem
+	color: white
+	font-family: $logo-font
+	font-size: 3rem
+	line-height: 1.1em
 
 img.image-center
-    object-position: center
+	object-position: center
 img.image-top
-    object-position: top
+	object-position: top
 
-
-//desktop headline
+// Desktop headline
 .big-headline
-    position: absolute
-    text-align: left
-    bottom: 1rem
-    color: white
-    font-family: $logo-font
-    font-size: 3.7rem
-    line-height: 1.1em
-    display: none
+	position: absolute
+	text-align: left
+	bottom: 1rem
+	color: white
+	font-family: $logo-font
+	font-size: 3.7rem
+	line-height: 1.1em
+	display: none
 .big-headline.active
-    display: block
+	display: block
 
-//mobile headline
+// Mobile headline
 .headline
-    color: white
-    background-color: $green
-    padding: 0
-    height: 80px
-    min-height: 70px
-    width: 100%
-    display: none
-    position: relative
+	color: white
+	background-color: $green
+	padding: 0
+	height: 80px
+	min-height: 70px
+	width: 100%
+	display: none
+	position: relative
 .text-wrap
-    top: 0
-    bottom: 0
-    left: 0
-    right: 0
-    position: absolute
+	top: 0
+	bottom: 0
+	left: 0
+	right: 0
+	position: absolute
 .headline-text
-    position: relative
-    text-align: center
-    font-size: 2.4rem
-    font-family: $logo-font
-    line-height: 1.1em
-    font-weight: lighter
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
-    width: 100%
-
+	display: inline-block
+	width: 100%
+	font-family: $logo-font
+	font-size: 2.4rem
+	line-height: 1rem
+	font-weight: lighter
+	position: relative
+	text-align: center
+	top: 45%
+	
 .headline.active
-    display: block
+	display: block
 
-// race containers
+// Race containers
 .card-content
-    text-align: center
-    position: relative
-    padding: 1em
+	text-align: center
+	position: relative
+	padding: 1em
 
 .card-title
-    text-align: center
-    bottom: 1rem
-    color: white
-    font-family: $logo-font
-    font-size: 2.3rem
-    line-height: 1.1em
+	text-align: center
+	bottom: 1rem
+	color: white
+	font-family: $logo-font
+	font-size: 2.3rem
+	line-height: 1.1em
 
 .card-content p
-    font-size: 1.6rem
-    line-height: 2rem
-    font-weight: lighter
-    color: #111
-    padding-bottom: 1rem
+	font-size: 1.6rem
+	line-height: 2rem
+	font-weight: lighter
+	color: #111
+	padding-bottom: 1rem
 
 #race-1
-    background-color: rgb(255, 112, 104, 0.95)
+	background-color: rgb(255, 112, 104, 0.95)
 #race-2
-    background-color: rgb(255, 228, 52, 0.80)
+	background-color: rgb(255, 228, 52, 0.80)
 #race-3
-    background-color: rgb(87, 178, 201, 0.80)
+	background-color: rgb(87, 178, 201, 0.80)
 #race-4
-    background-color: rgb(250, 182, 94)
+	background-color: rgb(250, 182, 94)
