--- a/styles/main.css
+++ b/styles/main.css
@@ -73,7 +73,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: #4acaaf;
+  color: #4eceb2;
 }
 
 .small-text {
@@ -101,7 +101,7 @@ a {
   z-index: 1000;
   left: 0;
   top: 0;
-  background-color: #4acaaf;
+  background-color: #4eceb2;
   transition: 0.5s;
 }
 
@@ -150,7 +150,7 @@ button {
 .btn {
   display: inline-block;
   text-decoration: 0;
-  background: #4acaaf;
+  background: #4eceb2;
   color: white;
   padding: 0.5em 1em 0.5em 1em;
   font-size: 1.3rem;
@@ -159,7 +159,7 @@ button {
 
 .btn:hover,
 .btn:focus {
-  color: #4acaaf;
+  color: #4eceb2;
   background: #87c5be40;
 }
 
@@ -340,7 +340,7 @@ button {
 
 a.toggle {
   display: block;
-  background-color: #4acaaf;
+  background-color: #4eceb2;
   color: white;
   padding: 1rem;
   border-radius: 0.1em;
@@ -351,7 +351,7 @@ a.toggle {
   font-weight: 300;
 }
 a.toggle:hover {
-  color: #4acaaf;
+  color: #4eceb2;
   background: #87c5be40;
 }
 
@@ -385,7 +385,7 @@ a.toggle:hover {
   width: auto;
   padding: 0.5em;
   margin-top: 0.5em;
-  background-color: #4acaaf;
+  background-color: #4eceb2;
   color: white;
   border-bottom: 0;
   border-radius: 3px;
@@ -463,7 +463,7 @@ img.image-top {
 
 .headline {
   color: white;
-  background-color: #4acaaf;
+  background-color: #4eceb2;
   padding: 0;
   height: 80px;
   min-height: 70px;
@@ -481,16 +481,15 @@ img.image-top {
 }
 
 .headline-text {
+  display: inline-block;
+  width: 100%;
+  font-family: "Martel Sans", sans-serif;
+  font-size: 2.4rem;
+  line-height: 1rem;
+  font-weight: lighter;
   position: relative;
   text-align: center;
-  font-size: 2.4rem;
-  font-family: "Martel Sans", sans-serif;
-  line-height: 1.1em;
-  font-weight: lighter;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
+  top: 45%;
 }
 
 .headline.active {
