update body and html height

--- a/src/stylesSass/2-base/_core.sass
+++ b/src/stylesSass/2-base/_core.sass
@@ -1,56 +1,56 @@
 html
-    height: 100%
-    font-size: 1em
-    
-body
-    background: white
-    color: #333
-    font-family: $main-font
-    font-weight: 300
-    line-height: 1.4rem
+	height: 100vh
+	font-size: 1em
 
-    margin: 0
+body
+	height: 100vh
+	background: white
+	color: #333
+	font-family: $main-font
+	font-weight: 300
+	line-height: 1.4rem
+
+	margin: 0
 
 img
-    display: block
-    width: 100%
-    height: auto
+	display: block
+	width: 100%
+	height: auto
 
 h1, h2
-    margin: 0
-    padding-top: 1.3rem
-    padding-bottom: 1.3rem
+	margin: 0
+	padding-top: 1.3rem
+	padding-bottom: 1.3rem
 
 h1
-    font-size: 1.6rem
-    line-height: 1.9rem
-    font-family: "Open Sans", sans-serif
-    font-weight: lighter
+	font-size: 1.6rem
+	line-height: 1.9rem
+	font-family: "Open Sans", sans-serif
+	font-weight: lighter
 
 h2
-    font-size: 1.2rem
-    font-family: Arial
-    font-weight: normal
+	font-size: 1.2rem
+	font-family: Arial
+	font-weight: normal
 
 p
-    margin: 0
+	margin: 0
 
 .content-title
-    text-align: center
+	text-align: center
 
 ul
-    list-style: none
-    margin: 0
-    padding: 0
+	list-style: none
+	margin: 0
+	padding: 0
 
 a
-    text-decoration: none
-    color: $green
+	text-decoration: none
+	color: $green
 
 .small-text
-    font-size: 0.9rem
+	font-size: 0.9rem
 
 .main-text
-    font-size: $text-font
-    line-height: 1.9rem
-
+	font-size: $text-font
+	line-height: 1.9rem
