--- a/styles/main.css
+++ b/styles/main.css
@@ -19,11 +19,12 @@
   }
 }
 html {
-  height: 100%;
+  height: 100vh;
   font-size: 1em;
 }
 
 body {
+  height: 100vh;
   background: white;
   color: #333;
   font-family: "Open Sans", sans-serif;
@@ -434,7 +435,7 @@ a.toggle:hover {
   bottom: 1rem;
   color: white;
   font-family: "Martel Sans", sans-serif;
-  font-size: 3rem;
+  font-size: 2.8rem;
   line-height: 1.1em;
 }
 
