--- a/src/stylesSass/2-base/_core.sass
+++ b/src/stylesSass/2-base/_core.sass
@@ -1,9 +1,8 @@
 html
-	height: 100vh
 	font-size: 1em
 
 body
-	height: 100vh
+	min-height: 100%
 	background: white
 	color: #333
 	font-family: $main-font
