--- a/src/sass/2-base/_core.sass
+++ b/src/sass/2-base/_core.sass
@@ -1,6 +1,5 @@
 html
 	font-size: 1em
-
 body
 	min-height: 100%
 	background: white
@@ -8,48 +7,49 @@ body
 	font-family: $main-font
 	font-weight: 300
 	line-height: 1.4rem
-
 	margin: 0
-
-img
-	display: block
-	width: 100%
-	height: auto
-
 h1, h2
 	margin: 0
 	padding-top: 1.3rem
 	padding-bottom: 1.3rem
-
 h1
 	font-size: 1.6rem
 	line-height: 1.9rem
 	font-family: "Open Sans", sans-serif
 	font-weight: lighter
-
 h2
 	font-size: 1.2rem
 	font-family: Arial
 	font-weight: normal
-
-p
-	margin: 0
-
 .content-title
 	text-align: center
-
+p
+	margin: 0
 ul
 	list-style: none
 	margin: 0
 	padding: 0
-
 a
 	text-decoration: none
 	color: $green
-
+	
+a,
+button
+	outline: 0
+a::-moz-focus-inner,
+button::-moz-focus-inner
+	border: 0
+a::focus,
+button::focus
+	outline: none
+	
 .small-text
 	font-size: 0.9rem
-
 .main-text
 	font-size: $text-font
 	line-height: 1.9rem
+
+img
+	display: block
+	width: 100%
+	height: auto
