--- a/src/sass/3-layout/_main-layout.sass
+++ b/src/sass/3-layout/_main-layout.sass
@@ -43,7 +43,7 @@
 
 .section-a
     background: white
-    padding: 0em 1em 0 1em
+    padding: 0
 
 .section-a ul li
     margin-bottom: 1em
@@ -57,6 +57,7 @@
     line-height: 1.8rem
     height: auto
     padding-top: 0
+    padding-bottom: 3rem
 
 .section-c
     background: white
