--- a/src/sass/5-templates/_media-screen.sass
+++ b/src/sass/5-templates/_media-screen.sass
@@ -45,7 +45,7 @@
         padding: 1em
     
     .section-b
-        min-height: 30vh
+        height: min-content
         max-height: min-content
 
     .content-title,
