--- a/styles/main.css
+++ b/styles/main.css
@@ -248,7 +248,7 @@ button {
 
 .section-a {
   background: white;
-  padding: 0em 1em 0 1em;
+  padding: 0;
 }
 
 .section-a ul li {
@@ -265,6 +265,7 @@ button {
   line-height: 1.8rem;
   height: auto;
   padding-top: 0;
+  padding-bottom: 3rem;
 }
 
 .section-c {
@@ -610,7 +611,7 @@ img.image-top {
   }
 
   .section-b {
-    min-height: 30vh;
+    height: min-content;
     max-height: min-content;
   }
 
