--- a/styles/main.css
+++ b/styles/main.css
@@ -80,8 +80,7 @@ button::-moz-focus-inner {
   border: 0;
 }
 
-a::focus,
-button::focus {
+*::focus {
   outline: none;
 }
 
@@ -197,8 +196,58 @@ button {
   text-decoration: none;
 }
 
-.grid {
-  padding: 1rem 1.5rem 0 1.5rem;
+.content-wrap {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section-a,
+.section-b,
+.section-c,
+.section-d {
+  width: 100%;
+  padding: 0;
+}
+
+.section-a {
+  background: white;
+  padding: 0;
+}
+
+.section-a ul li {
+  margin-bottom: 1em;
+}
+
+.section-a ul li a {
+  margin-top: 1em;
+}
+
+.section-b {
+  background: white;
+  font-size: 1.1rem;
+  line-height: 1.8rem;
+  height: auto;
+  padding-top: 0;
+  padding-bottom: 3rem;
+}
+
+.section-c {
+  background: white;
+  font-size: 1.2rem;
+  line-height: 1.9rem;
+}
+
+.section-d {
+  background: white;
+  text-align: left;
+}
+
+.section-d .content-wrap {
+  font-size: 1.1rem;
+  line-height: 1.9rem;
 }
 
 #navigation-bar {
@@ -246,49 +295,11 @@ button {
   display: inline-block;
 }
 
-.section-a {
-  background: white;
-  padding: 0;
-}
-
-.section-a ul li {
-  margin-bottom: 1em;
-}
-
-.section-a ul li a {
-  margin-top: 1em;
-}
-
-.section-b {
-  background: white;
-  font-size: 1.1rem;
-  line-height: 1.8rem;
-  height: auto;
-  padding-top: 0;
-  padding-bottom: 3rem;
-}
-
-.section-c {
-  background: white;
-  font-size: 1.2rem;
-  line-height: 1.9rem;
-}
-
-.section-d {
-  background: white;
-  text-align: left;
-}
-
-.section-d .content-wrap {
-  font-size: 1.1rem;
-  line-height: 1.9rem;
-}
-
 #main-footer {
-  padding: 2em 0 0 0;
+  padding: 2rem 0 0 0;
   background: white;
   color: #00000070;
-  line-height: 2em;
+  line-height: 2rem;
   height: min-content;
   font-size: 0.65rem;
   text-align: center;
@@ -313,11 +324,11 @@ button {
 }
 
 .top-padding {
-  padding-top: 1em;
+  padding-top: 1rem;
 }
 
 .bottom-padding {
-  padding-bottom: 1em;
+  padding-bottom: 1rem;
 }
 
 .opening {
@@ -355,7 +366,7 @@ button {
   font-size: 1.1rem;
 }
 .inner.show {
-  /*display: block;*/
+  /*display: block*/
 }
 
 a.toggle {
@@ -364,7 +375,7 @@ a.toggle {
   color: white;
   padding: 1rem;
   border-radius: 0.1em;
-  margin: 0.3em 0 0 0.3em;
+  margin: 0.3rem 0 0 0;
   transition: background 0.3s ease;
   line-height: 1.9rem;
   font-size: 1.3rem;
@@ -575,17 +586,17 @@ img.image-top {
   }
 }
 @media screen and (min-width: 700px) {
-  .grid {
-    display: grid;
-    grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
+  .content-wrap {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .image-grid {
     display: grid;
-    grid-template-columns: 0.4fr 1fr 1fr 0.4fr;
-    grid-template-rows: auto auto;
-    grid-template-areas: ". race-1 race-1 ." ". race-2 race-2 ." ". race-3 race-3 ." ". race-4 race-4 .";
-    grid-gap: 1em;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "race-1" "race-2" "race-3" "race-4";
+    grid-gap: 1rem;
   }
 
   #race-1,
@@ -594,7 +605,7 @@ img.image-top {
 #race-4,
 .content-wrap,
 #main-footer div {
-    grid-column: 2/4;
+    grid-column: 1/2;
   }
 
   .showcase-title {
@@ -604,10 +615,6 @@ img.image-top {
   .showcase-image,
 .hero-image {
     height: 70vh;
-  }
-
-  .section-a {
-    padding: 1em;
   }
 
   .section-b {
@@ -622,6 +629,10 @@ img.image-top {
 
   .section-a ul li {
     margin: 0;
+  }
+
+  .section-c .landing-page-text {
+    text-align: center;
   }
 
   #navigation-bar #menu {
@@ -668,8 +679,15 @@ img.image-top {
   .landing-page-text {
     font-size: 1.3rem;
     line-height: 1.9rem;
+    text-align: left;
     padding-top: 1.5rem;
     padding-bottom: 0;
+  }
+}
+@media screen and (min-width: 992px) {
+  .content-wrap {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 }
 
