add transition style to buttons

--- a/src/sass/2-base/_buttons.sass
+++ b/src/sass/2-base/_buttons.sass
@@ -1,82 +1,83 @@
 //menu icon and content
 .menu-icon
-	color: white
-	font-size: 2.5rem
-	border: none
-	background-color: inherit
-	cursor: pointer
-	align-self: center
+  color: white
+  font-size: 2.5rem
+  border: none
+  background-color: inherit
+  cursor: pointer
+  align-self: center
 
 #menu
-	height: 100%
-	width: 0%
-	position: fixed
-	z-index: 1000 //must be higher than #navigation-bar
-	left: 0
-	top: 0
-	background-color: $green
-	transition: 0.5s
+  height: 100%
+  width: 0%
+  position: fixed
+  z-index: 1000 //must be higher than #navigation-bar
+  left: 0
+  top: 0
+  background-color: $green
+  transition: all 0.5s ease-in-out
 
 .menu-content
-	position: relative
-	width: 100%
-	overflow: hidden
-	top: 5rem
+  position: relative
+  width: 100%
+  overflow: hidden
+  top: 5rem
 
 .menu-content li,
 .menu-content li ul li
-	padding: 0.5em
-	text-decoration: none
-	font-size: 2rem
-	text-align: center
-	display: block
-	transition: 0.3s
-	font-family: $button-font
-	font-weight: lighter
+  padding: 0.5em
+  text-decoration: none
+  font-size: 2rem
+  text-align: center
+  display: block
+  transition: all 0.3s ease-in
+  font-family: $button-font
+  font-weight: lighter
 .menu-content li span
-	color: whitesmoke
+  color: whitesmoke
 
 .menu-link
-	color: whitesmoke
-	cursor: pointer
+  color: whitesmoke
+  cursor: pointer
 .menu-link:hover
-	text-decoration: none
+  text-decoration: none
 
 #close-button
-	position: absolute
-	padding-top: 1.5rem
-	padding-right: 1.5rem
-	right: 0
-	font-size: 3.5rem
-	color: whitesmoke
-	cursor: pointer
+  position: absolute
+  padding-top: 1.5rem
+  padding-right: 1.5rem
+  right: 0
+  font-size: 3.5rem
+  color: whitesmoke
+  cursor: pointer
 
 button
-	cursor: pointer
+  cursor: pointer
 
 //read more & enroll buttons
 .btn
-	display: inline-block
-	text-decoration: 0
-	background: $green
-	color: white
-	padding: 0.5em 1em 0.5em 1em
-	font-size: 1.3rem
-	font-weight: 400
+  display: inline-block
+  text-decoration: 0
+  background: $green
+  color: white
+  padding: 0.5em 1em 0.5em 1em
+  font-size: 1.3rem
+  font-weight: 400
+  transition: all 0.2s ease-in-out
 
 .btn:hover,
 .btn:focus
-	color: $green
-	background: $green-transparent
+  color: $green
+  background: $green-transparent
 
 //instagram and fb
 .icon-container
-	text-align: center
-	padding-top: 2.5em
+  text-align: center
+  padding-top: 2.5em
 
 .icon
-	color: #333
-	font-size: 2rem
-	padding: 0.3em
+  color: #333
+  font-size: 2rem
+  padding: 0.3em
 #logo:hover
-	text-decoration: none
+  text-decoration: none
