--- a/src/sass/5-templates/_media-screen.sass
+++ b/src/sass/5-templates/_media-screen.sass
@@ -29,9 +29,7 @@
     #race-1,
     #race-2,
     #race-3,
-    #race-4,
-    .content-wrap,
-    #main-footer div
+    #race-4
         grid-column: 1/2
 
     .showcase-title
