--- a/src/sass/4-modules/_contact-form.sass
+++ b/src/sass/4-modules/_contact-form.sass
@@ -29,10 +29,14 @@
     color: white
     border-bottom: 0
     border-radius: 3px
+    transition: all 0.2s ease-in-out
 
 #submit-button:hover,
 #submit-button:focus
-    text-decoration: underline
+    text-decoration: none
+    color: $green
+    background: $green-transparent
+    
 
 .has-error
     background-color: red
