--- a/src/sass/4-modules/_image-containers.sass
+++ b/src/sass/4-modules/_image-containers.sass
@@ -2,7 +2,9 @@
 #showcase
   position: relative
 
-.hero-image
+.hero-image,
+.showcase-image
+  
   position: relative
   height: 20rem
 .hero-image img
@@ -10,10 +12,6 @@
   height: 100%
   object-fit: cover
   object-position: center
-
-.showcase-image
-  position: relative
-  height: 20rem
 
 .showcase-image img
   width: 100%
@@ -40,8 +38,11 @@ img.image-top
 
 // Desktop headline
 .big-headline
-  position: absolute
+  position: relative
+  display: block
+  margin-top: auto
   text-align: left
+  width: 100%
   bottom: 1rem
   color: white
   font-family: $logo-font
