--- a/styles/main.css
+++ b/styles/main.css
@@ -113,14 +113,17 @@ img {
 }
 
 #menu {
-  height: 100%;
-  width: 0%;
   position: fixed;
   z-index: 1000;
-  left: 0;
   top: 0;
+  left: -720px;
+  height: 100%;
+  width: 100%;
   background-color: #4eceb2;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+#menu.active {
+  left: 0;
 }
 
 .menu-content {
